refactor: Replace collect(Collectors.toList()) with .toList() in AttemptController
Consistent with all other controllers using the modern Stream.toList() idiom.

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>